--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -84,7 +84,7 @@ h1, h2, h3, h4, h5, p, i, em, b, strong, a {
 	&[align="center"] 		{ text-align: center; }
 	&[align="justify"]		{ text-align: justify; }
 	&[case="lower"]			{ text-transform: lowercase; }
-	&[case="uppper"]		{ text-transform: uppercase; }
+	&[case="upper"]		{ text-transform: uppercase; }
 }
 
 // -- Typography system media queries
