--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -3,68 +3,108 @@
 //
 // -- Component: Navigation
 // Navigation system consists of row & column menus
-
 navmenu {
-	display: flex;
-	//align-items: center;
-	width: 100%;
-	height: 100%;
-
-	&[orientation="horizontal"] 	{ flex-direction: row; }
-	&[orientation="vertical"] 		{ flex-direction: column; height: auto; }
-
-	&[items="start"] 		{ align-items: flex-start; }
-	&[items="end"] 			{ align-items: flex-end; }
-	&[items="center"] 		{ align-items: center; }
-	&[items="baseline"] 	{ align-items: baseline; }
-	&[items="stretch"] 		{ align-items: stretch; }
-
-	&[justify="start"] 		{ justify-content: flex-start; }
-	&[justify="end"] 		{ justify-content: flex-end; }
-	&[justify="center"] 	{ justify-content: center; }
-	&[justify="between"] 	{ justify-content: space-between; }
-	&[justify="around"] 	{ justify-content: space-around; }	
-
-	&[content="start"] 		{ align-content: flex-start; }
-	&[content="end"] 		{ align-content: flex-end; }
-	&[content="center"] 	{ align-content: center; }
-	&[content="center"] 	{ align-content: stretch; }
-	&[content="between"] 	{ align-content: space-between; }
-	&[content="around"] 	{ align-content: space-around; }	
+    display: flex;
+    //align-items: center;
+    width: 100%;
+    height: 100%;
+    &[orientation="horizontal"] {
+        flex-direction: row;
+    }
+    &[orientation="vertical"] {
+        flex-direction: column;
+        height: auto;
+    }
+    &[items="start"] {
+        align-items: flex-start;
+    }
+    &[items="end"] {
+        align-items: flex-end;
+    }
+    &[items="center"] {
+        align-items: center;
+    }
+    &[items="baseline"] {
+        align-items: baseline;
+    }
+    &[items="stretch"] {
+        align-items: stretch;
+    }
+    &[justify="start"] {
+        justify-content: flex-start;
+    }
+    &[justify="end"] {
+        justify-content: flex-end;
+    }
+    &[justify="center"] {
+        justify-content: center;
+    }
+    &[justify="between"] {
+        justify-content: space-between;
+    }
+    &[justify="around"] {
+        justify-content: space-around;
+    }
+    &[content="start"] {
+        align-content: flex-start;
+    }
+    &[content="end"] {
+        align-content: flex-end;
+    }
+    &[content="center"] {
+        align-content: center;
+    }
+    &[content="center"] {
+        align-content: stretch;
+    }
+    &[content="between"] {
+        align-content: space-between;
+    }
+    &[content="around"] {
+        align-content: space-around;
+    }
 }
 
 navitem {
-	display: flex;
-	align-items: center;
-	padding: 1em;
+    display: flex;
+    align-items: center;
+    padding: 1em;
 }
 
 // -- Navigation system media queries
-
 @media screen and (min-width: $grid-computer-min) {
-	navmenu, navitem {
-		&[for-computer] 	{ display: flex; }
-	}	
+    navmenu,
+    navitem {
+        &[for-computer] {
+            display: flex;
+        }
+    }
 }
 
 @media screen and (max-width: $grid-tablet-max) and (min-width: $grid-tablet-min) {
-	navmenu[orientation="row"], navmenu:not([orientation="column"]) {
-		flex-direction: column;
-		align-items: center;
-	}
-
-	navmenu, navitem {
-		&[for-tablet] 	{ display: flex; }
-	}
+    navmenu[orientation="row"],
+    navmenu:not([orientation="column"]) {
+        flex-direction: column;
+        align-items: center;
+    }
+    navmenu,
+    navitem {
+        &[for-tablet] {
+            display: flex;
+        }
+    }
 }
 
 @media screen and (max-width: $grid-phone-max) {
-	navmenu[orientation="row"], navmenu:not([orientation="column"]) {
-		flex-direction: column;
-		align-items: center;
-	}
-
-	navmenu, navitem {
-		&[for-phone] 	{ display: flex; }
-	}
+    navmenu[orientation="row"],
+    navmenu:not([orientation="column"]) {
+        flex-direction: column;
+        align-items: center;
+    }
+    navmenu,
+    navitem {
+        &[for-phone] {
+            display: flex;
+        }
+    }
 }
